Fix alignment

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,4 +1,10 @@
+
 * {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow',
   Arial, sans-serif;  
+  margin: 0;
+  box-sizing: border-box;
 }
+
+
+
